--- a/client/src/componentes/SubscribeMail/SubscribeMail.module.css
+++ b/client/src/componentes/SubscribeMail/SubscribeMail.module.css
@@ -2,7 +2,7 @@
    /* border: 5px solid rgba(0, 0, 255, 0.562); */
    width: 100%;
    min-height: 100px;
-   background-color: darkslategray;
+   background-color: #D3D3D3;
 
    display: flex;
    flex-direction: row;
