--- a/client/src/componentes/Admin/Pages/articleList.module.css
+++ b/client/src/componentes/Admin/Pages/articleList.module.css
@@ -1,6 +1,6 @@
 .table {
 	width: 100%;
-	/* height: 400px; */
+	height: 500px;
 	border-collapse: separate;
 	vertical-align: top;
 }
@@ -16,10 +16,10 @@ td {
 	width: 25%;
 }
 .table tr:nth-child(even) {
-	background: rgb(36, 41, 51);
+	background: rgb(46, 57, 68);
 }
 .table tr:nth-child(odd) {
-	background: rgb(51, 56, 67);
+	background: rgb(86, 88, 98);
 }
 thead {
 	background-color: rgb(53, 52, 52);
