--- a/client/src/componentes/Admin/Pages/articleList.module.css
+++ b/client/src/componentes/Admin/Pages/articleList.module.css
@@ -1,7 +1,7 @@
 .table {
 	width: 100%;
 	height: 300px;
-	border-collapse: separate;
+	border-collapse: collapse;
 	vertical-align: top;
 	color: rgb(245, 228, 228);
 }
